2004-08-11 Bogdan Gheorghe
	Fix for Bug 59493: need to refine index query for open-type 
	
	* search/org/eclipse/cdt/internal/core/search/ICSearchConstants.java
	* search/org/eclipse/cdt/internal/core/search/matching/ClassDeclarationPattern.java
	* search/org/eclipse/cdt/internal/core/search/matching/CSearchPattern.java
	* search/org/eclipse/cdt/internal/core/search/matching/DerivedTypesPattern.java
	* search/org/eclipse/cdt/internal/core/search/matching/FriendPattern.java
	
2004-06-25 Bogdan Gheorghe
	Indirect fix for Bug 65551: [Search] Search for Variable references should not include parameters
	Instead of excluding parameter references from searches, added parm declarations to the index (for
	both functions and methods)
	
	* search/org/eclipse/cdt/core/search/BasicSearchResultCollector.java
	* index/org/eclipse/cdt/internal/core/search/matching/MatchLocator.java
	
2004-06-25 Bogdan Gheorghe
	Fix for 68550: [Indexer] Cannot restart indexer by touching .c/.cpp/.cc files
	
	* search/org/eclipse/cdt/internal/core/search/processing/JobManager.java
	* index/org/eclipse/cdt/internal/core/search/indexing/IndexManager.java
	
2004-06-24 Bogdan Gheorghe
	Fix for 66695: [Indexer] Manually add an include path to a file/folder 
	is ignored by indexer
	
	* search/org/eclipse/cdt/internal/core/search/matching/MatchLocator.java
	
2004-06-22 Alain Magloire
	Part of PR 68246.
	Close the inputstream to release resource handle
	when we done with it, we can not rely on the GC to do it for us.

	* search/org/eclipse/cdt/internal/core/search/matching/MatchLocator.java

2004-06-21 Bogdan Gheorghe
	Modified JobManager to change state from waiting to enabled on a job request.
	
2004-06-11 Andrew Niefer
	fix bugs 43063 & 43498 - better handling of spaces around wild cards in search pattern

2004-06-10 Andrew Niefer
	fix bug 64986 - handle Containers in CSearchScope

2004-05-26 Andrew Niefer
	Modified search to use ASTUtil.getFunctionParameterTypes to get the strings to search for